Vasile/Kubernetes-tasks/K8S/users-manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: fullstack-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend

          image: task-5-fullstak-app-backend:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 3000

          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000

            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000

            initialDelaySeconds: 15
            periodSeconds: 20

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"

            limits:
              memory: "256Mi"
              cpu: "250m"
