Vasile/Kubernetes-tasks/K8S/users-manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: fullstack-app

spec:
  type: ClusterIP

  selector:
    app: backend

  ports:
    - port: 3000
      targetPort: 3000
