Vasile/Kubernetes-tasks/K8S/users-manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: fullstack-app

spec:
  type: NodePort

  selector:
    app: frontend

  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
